# lightning-hydra-template-x

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
configs/trainer/: deepspeed.yaml
src/: eval.py  train.py
src/utils/: utils.py
