[tool.poetry]
name = "PROJECT NAME"
version = "0.1.0"
description = "PROJECT DESCRIPTION"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "REPOSITORY LINK"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # Allow Python 3.11

# --------- PyTorch & Related ---------
torch = ">=2.0.0"
torchvision = ">=0.15.0"
lightning = ">=2.0.0"
torchmetrics = ">=0.11.4"
deepspeed = ">=0.16.5"

# --------- Hydra ---------
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"

# --------- Loggers ---------
wandb = ">=0.19.8"
# Uncomment if needed
# neptune-client = "*"
# mlflow = "*"
# comet-ml = "*"
# aim = ">=3.16.2"  # No lower than 3.16.2 due to compatibility issues

# --------- Others ---------
rootutils = "*"
pre-commit = "*"
rich = "*"
pytest = "*"
# Uncomment if needed
# sh = "*"  # Only if running bash commands in some tests

[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"

[tool.poetry.scripts]
train_command = "src.train:main"
eval_command = "src.eval:main"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == '__main__':",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
